
2016-12-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: limit for ACUCOBOL literals: UINT_MAX
	* tree.c: check for LLONG_MAX and define it if it is defined as
	  LONG_LONG_MAX / _I64_MAX

2016-12-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): output exact C compiler which was used
	  to build cobc and if GMP/MPIR header was used

2016-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_filename) [_WIN32]: check extension .asm along to .s
	* cobc.c (process_compile) [!_MSC_VER]: use COB_PIC_FLAGS when compiling
	  to a module, surround the translation name by quotes

2016-11-22  Dave Pitts <dpitts@cozx.com>

	* cobc.c (print_program_code): Free replace text. Realloc replace text
	  instead of memcpy of source.
	* pplex.l (ppopen): Only strdup filename if NULL.

2016-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c, parser.y: fixing tree cast errors (found by COB_TREE_DEBUG)
	* cobc.c (print_88_values, get_next_listing_line): fix SIGSEGV for uncommon
	  long names / lines
	* cobc.c: fix minor memory leaks in listing code
	* pplex.l, cobc.h: commented copy_tail as it doesn't seem to be used

2016-11-19 Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, reserved.c, etc.: added complete recognition of all
	  COMMUNICATION SECTION syntax.
	* config.def: added use-for-debugging config option.

2016-11-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call_cache): fix bug #341 added generation of macro
	  check in C function declarations for static CALLs

2016-11-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_trim_program_id): change warning message for remove of
	  spaces in program-id to be more specific and don't warn embedded spaces

2016-11-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c (cb_trim_program_id), tree.h: added code to warn